v5.6.9
- Updated - Offcanvas menu label support
- Updated - core/comment-template: remove custom title as it was added as a separate block in WP Core
- Updated - Single template to use core/comments-title block
- Updated - Single template markup: remove unnecessary group wrapper and use col- classes for width
- Updated - CSS for core/comment-template and core/comment-title blocks
- Updated - Romanian local translation
- Updated - Gutenberg Styles extension UI - moved Popover into label
- Fixed - core/navigation justification and alignment
- Fixed - core/search styles and button markup after Gutenberg updates
- Fixed - page-sidebar columns vertical alignment
- Added - Pillar Content template/pattern with table of contents

v5.6.8
- Removed - Deprecated pattern block filter
- Updated - Grid layout for post-template
- Updated - Query Overlay as a default post listing
- Updated - Gutenberg block styles (custom CSS) interface improvements - moved description to a Popover component
- Updated - Link hover color (darken) apply to a:where(:not(.wp-element-button)), in sync with WP Core
- Fixed - Dark footer partial to properly include footer-credits pattern
- Fixed - core/navigation offcanvas justification and alignment when having 'navbar-expand' class
- Fixed - core/navigation blockGap css generation after adding spacing utilities

v5.6.7
- Removed - layout CSS generation and let WP handle block layout support
- Updated - core/image styles output to img (as Gutenberg introduced border/border-radius controls)
- Updated - core/buttons and core/button increased CSS specificity for group and outline/link styles
- Updated - core/page-list default pages number
- Updated - skip link PHP js code to JavaScript file
- Updated - Footers columns vertical alignment after Layout support updates
- Updated - core/recent-posts and core/recent-comments entry meta layout
- Fixed - spacings: margin/padding after Gutenberg update with spacing.spacingSizes (theme.json)