@@ -1,1 +1,1 @@
-.wp-block-pullquote{padding:3rem 0;text-align:center;border-top-width:5px;border-bottom-width:5px;border-top-style:solid;border-bottom-style:solid}.wp-block-pullquote.is-style-solid-color{border-width:0;border-style:none}.wp-block-pullquote.is-style-solid-color blockquote{margin:0 auto 0;text-align:left;max-width:max( 400px,60% )}.wp-block-pullquote.is-style-solid-color blockquote p{font-size:2.5rem;margin-bottom:0}.wp-block-pullquote blockquote{margin-bottom:0;padding:0 1rem}.wp-block-pullquote p{margin-bottom:0;font-size:1.5rem}
+.wp-block-pullquote{padding:3rem 0;text-align:center;border-top-width:5px;border-bottom-width:5px;border-top-style:solid;border-bottom-style:solid}.wp-block-pullquote blockquote{margin-bottom:0;padding:0 1rem}.wp-block-pullquote p{margin-bottom:0;font-size:1.5rem}
